Fix #41 navbar clipping

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -34,7 +34,3 @@ img.sitelogo {
 .nav > li:last-child > a {
     padding-right: 0;
 }
-
-.navbar-right {
-    margin-right: 0;
-}
